test/ll_parser_input_test.test
COMMENT: line 1:
// Layers Language Standard Lexical Analyzer Test Data
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 1:
// Layers Language Standard Lexical Analyzer Test Data
                                                      ^
COMMENT: line 2:
//
^^
LINE_BREAK: line 2:
//
  ^
COMMENT: line 3:
// File:        ll_lexeme_standard_test.in
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 3:
// File:        ll_lexeme_standard_test.in
                                          ^
COMMENT: line 4:
// Author:      Bob Walton (walton@acm.org)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 4:
// Author:      Bob Walton (walton@acm.org)
                                           ^
COMMENT: line 5:
// Date:        Sun Nov 30 23:08:35 EST 2014
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 5:
// Date:        Sun Nov 30 23:08:35 EST 2014
                                            ^
COMMENT: line 6:
//
^^
LINE_BREAK: line 6:
//
  ^
COMMENT: line 7:
// The authors have placed this data in the public
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 7:
// The authors have placed this data in the public
                                                  ^
COMMENT: line 8:
// domain; they make no warranty and accept no liability
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 8:
// domain; they make no warranty and accept no liability
                                                        ^
COMMENT: line 9:
// for this data.
^^^^^^^^^^^^^^^^^
LINE_BREAK: lines 9-10:
// for this data.
                 ^
<BLANK-LINE>
^
WORD: "abc": line 11:
abc 3.4+z (x,y)
^^^
NUMBER: "3.4": line 11:
abc 3.4+z (x,y)
    ^^^
MARK: "+": line 11:
abc 3.4+z (x,y)
       ^
WORD: "z": line 11:
abc 3.4+z (x,y)
        ^
SEPARATOR: "(": line 11:
abc 3.4+z (x,y)
          ^
WORD: "x": line 11:
abc 3.4+z (x,y)
           ^
SEPARATOR: ",": line 11:
abc 3.4+z (x,y)
            ^
WORD: "y": line 11:
abc 3.4+z (x,y)
             ^
SEPARATOR: ")": line 11:
abc 3.4+z (x,y)
              ^
LINE_BREAK: line 11:
abc 3.4+z (x,y)
               ^
QUOTED_STRING: "hi": line 12:
"hi" "ho<HT>x y<>z<LF>"
^^^^
QUOTED_STRING: "ho␉x␣y<>z␊": line 12:
"hi" "ho<HT>x y<>z<LF>"
     ^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 12:
"hi" "ho<HT>x y<>z<LF>"
                       ^
WORD: "'tis": line 13:
'tis noth'ng `but' a h'dache.
^^^^
WORD: "noth'ng": line 13:
'tis noth'ng `but' a h'dache.
     ^^^^^^^
SEPARATOR: "`": line 13:
'tis noth'ng `but' a h'dache.
             ^
WORD: "but": line 13:
'tis noth'ng `but' a h'dache.
              ^^^
SEPARATOR: "'": line 13:
'tis noth'ng `but' a h'dache.
                 ^
WORD: "a": line 13:
'tis noth'ng `but' a h'dache.
                   ^
WORD: "h'dache": line 13:
'tis noth'ng `but' a h'dache.
                     ^^^^^^^
MARK: ".": line 13:
'tis noth'ng `but' a h'dache.
                            ^
LINE_BREAK: line 13:
'tis noth'ng `but' a h'dache.
                             ^
WORD: "a": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
^
NUMBER: ".1.2.3": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
 ^^^^^^
MARK: ".": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
       ^
WORD: "b": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
        ^
MARK: ".": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
         ^
WORD: "c": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
          ^
WORD: "e": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
            ^
NATURAL_NUMBER: "5": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
             ^
WORD: "f": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
              ^
WORD: "x": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                ^
NATURAL_NUMBER: "7": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                 ^
MARK: "+": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                  ^
WORD: "y": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                   ^
NATURAL_NUMBER: "6": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                    ^
SEPARATOR: "(": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                     ^
NATURAL_NUMBER: "5": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                      ^
WORD: "z": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                       ^
SEPARATOR: ")": line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                        ^
LINE_BREAK: line 14:
a.1.2.3.b.c e5f x7+y6(5z)
                         ^
NUMBER: "12.3": line 15:
12.3 .4 5. 6/7
^^^^
NUMBER: ".4": line 15:
12.3 .4 5. 6/7
     ^^
NATURAL_NUMBER: "5": line 15:
12.3 .4 5. 6/7
        ^
MARK: ".": line 15:
12.3 .4 5. 6/7
         ^
NUMBER: "6/7": line 15:
12.3 .4 5. 6/7
           ^^^
LINE_BREAK: line 15:
12.3 .4 5. 6/7
              ^
NUMBER: "1,23,456": line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
^^^^^^^^
NUMBER: "1,234/6,789": line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
         ^^^^^^^^^^^
NUMBER: "1/2/3/4,5/6,7,8/9": line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                     ^^^^^^^^^^^^^^^^^
NUMBER: "8888.12,3,4": line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                       ^^^^^^^^^^^
LINE_BREAK: line 16:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                                  ^
MARK: "/": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
^
NATURAL_NUMBER: "3": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
 ^
NUMBER: "6.34.56": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
   ^^^^^^^
MARK: "/": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
          ^
NATURAL_NUMBER: "3": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
            ^
SEPARATOR: ",": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
             ^
NATURAL_NUMBER: "4": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
               ^
SEPARATOR: ",": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                ^
SEPARATOR: ",": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                  ^
NATURAL_NUMBER: "5": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                   ^
SEPARATOR: ",": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                     ^
NUMBER: "6.7,8.9": line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                      ^^^^^^^
LINE_BREAK: line 17:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                             ^
MARK: "+-*~@#$%^&=|<>_!?:": line 18:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><LF>
^^^^^^^^^^^^^^^^^^
QUOTED_STRING: "foo": line 18:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><LF>
                  ^^^^^
WORD: "x": line 18:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><LF>
                       ^
ERROR: ascii escape sequence; line 18:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><LF>
                        ^^^^
ERROR: ascii escape sequence; line 18:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><LF>
                            ^^^^
MARK: "<": line 18:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><LF>
                                ^
WORD: "LF": line 18:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><LF>
                                 ^^
MARK: ">": line 18:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><LF>
                                   ^
LINE_BREAK: line 18:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><LF>
                                    ^
MARK: ".": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
^
WORD: "foo": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
 ^^^
MARK: "/": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
     ^
WORD: "foo": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
      ^^^
NATURAL_NUMBER: "3": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
          ^
MARK: "/": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
           ^
WORD: "x": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
            ^
WORD: "x": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
              ^
MARK: "/": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
               ^
NATURAL_NUMBER: "3": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                ^
NATURAL_NUMBER: "3": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                  ^
MARK: ".": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                   ^
WORD: "x": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                    ^
WORD: "x": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                      ^
NUMBER: ".3": line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                       ^^
COMMENT: line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                         ^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 19:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                                           ^
WORD: "a": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
^
SEPARATOR: "(": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
 ^
WORD: "b": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
  ^
SEPARATOR: ",": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
   ^
WORD: "c": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
    ^
SEPARATOR: ")": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
     ^
WORD: "d": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
       ^
SEPARATOR: "{": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
        ^
WORD: "e": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
         ^
SEPARATOR: ";": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
          ^
WORD: "f": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
           ^
SEPARATOR: "}": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
            ^
WORD: "g": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
              ^
SEPARATOR: "[": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
               ^
WORD: "h": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                ^
SEPARATOR: ",": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                 ^
WORD: "i": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                  ^
SEPARATOR: "]": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                   ^
SEPARATOR: "`": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                     ^
SEPARATOR: "`": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                      ^
WORD: "foobar": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                       ^^^^^^
SEPARATOR: "'": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                             ^
WORD: "fum": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                               ^^^
SEPARATOR: "'": line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                                  ^
LINE_BREAK: line 20:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                                   ^
COMMENT: line 21:
// form feed ␌
^^^^^^^^^^^^^
LINE_BREAK: line 21:
// form feed ␌
             ^
COMMENT: line 22:
// vertical tab ␋
^^^^^^^^^^^^^^^^
LINE_BREAK: line 22:
// vertical tab ␋
                ^
COMMENT: line 23:
// carriage return ␍
^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 23:
// carriage return ␍
                   ^
WORD: "z": line 24:
z       x // horizontal tab
^
WORD: "x": line 24:
z       x // horizontal tab
        ^
COMMENT: line 24:
z       x // horizontal tab
          ^^^^^^^^^^^^^^^^^
LINE_BREAK: line 24:
z       x // horizontal tab
                           ^
WORD: "all": line 25:
all     ␌␋␍
^^^
LINE_BREAK: line 25:
all     ␌␋␍
        ^^^
WORD: "control": line 26:
control A␁B␂C␃
^^^^^^^
WORD: "A": line 26:
control A␁B␂C␃
        ^
ERROR: misplaced character; line 26:
control A␁B␂C␃
         ^
WORD: "B": line 26:
control A␁B␂C␃
          ^
ERROR: misplaced character; line 26:
control A␁B␂C␃
           ^
WORD: "C": line 26:
control A␁B␂C␃
            ^
ERROR: misplaced character; line 26:
control A␁B␂C␃
             ^
LINE_BREAK: line 26:
control A␁B␂C␃
              ^
ERROR: unrecognized escape sequence; line 27:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
                            ^^^^
QUOTED_STRING: "<Q>␊␍␉␈␌␋␣â␁": line 27:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 27:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
                                             ^
ERROR: ascii escape sequence; line 28:
<0041><00000042>C D<00000045><0046>G
^^^^^^
ERROR: ascii escape sequence; line 28:
<0041><00000042>C D<00000045><0046>G
      ^^^^^^^^^^
WORD: "C": line 28:
<0041><00000042>C D<00000045><0046>G
                ^
WORD: "D": line 28:
<0041><00000042>C D<00000045><0046>G
                  ^
ERROR: ascii escape sequence; line 28:
<0041><00000042>C D<00000045><0046>G
                   ^^^^^^^^^^
ERROR: ascii escape sequence; line 28:
<0041><00000042>C D<00000045><0046>G
                             ^^^^^^
WORD: "G": line 28:
<0041><00000042>C D<00000045><0046>G
                                   ^
LINE_BREAK: line 28:
<0041><00000042>C D<00000045><0046>G
                                    ^
ERROR: ascii escape sequence; line 29:
<0041><000000B5>C D<000000E3><0006>G
^^^^^^
WORD: "µC": line 29:
<0041><000000B5>C D<000000E3><0006>G
      ^^^^^^^^^^^
WORD: "Dã": line 29:
<0041><000000B5>C D<000000E3><0006>G
                  ^^^^^^^^^^^
ERROR: ascii escape sequence; line 29:
<0041><000000B5>C D<000000E3><0006>G
                             ^^^^^^
WORD: "G": line 29:
<0041><000000B5>C D<000000E3><0006>G
                                   ^
LINE_BREAK: line 29:
<0041><000000B5>C D<000000E3><0006>G
                                    ^
ERROR: ascii escape sequence; line 30:
<0001>
^^^^^^
LINE_BREAK: line 30:
<0001>
      ^
QUOTED_STRING: "␀␁␂␃␄␅␆␇": line 31:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 31:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
                                          ^
QUOTED_STRING: "␈␉␊␊␋␌␍␎␏": line 32:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 32:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
                                      ^
QUOTED_STRING: "␐␑␒␓␔␕␖␗": line 33:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 33:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
                                          ^
QUOTED_STRING: "␘␙␚␛␜␝␞␟␡": line 34:
"<CAN><EM><SUB><ESC><FS><GS><RS><US><DEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 34:
"<CAN><EM><SUB><ESC><FS><GS><RS><US><DEL>"
                                          ^
ERROR: misplaced control character; line 35:
"misplaced control ␁"
                   ^
QUOTED_STRING: "misplaced␣control␣": line 35:
"misplaced control ␁"
^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 35:
"misplaced control ␁"
                     ^
WORD: "misplaced": line 36:
misplaced space ␌ here and ␍ here
^^^^^^^^^
WORD: "space": line 36:
misplaced space ␌ here and ␍ here
          ^^^^^
ERROR: misplaced space; line 36:
misplaced space ␌ here and ␍ here
                ^
WORD: "here": line 36:
misplaced space ␌ here and ␍ here
                  ^^^^
WORD: "and": line 36:
misplaced space ␌ here and ␍ here
                       ^^^
ERROR: misplaced space; line 36:
misplaced space ␌ here and ␍ here
                           ^
WORD: "here": line 36:
misplaced space ␌ here and ␍ here
                             ^^^^
LINE_BREAK: line 36:
misplaced space ␌ here and ␍ here
                                 ^
MARK: "=<": line 37:
=<9=<8
^^
NATURAL_NUMBER: "9": line 37:
=<9=<8
  ^
MARK: "=<": line 37:
=<9=<8
   ^^
NATURAL_NUMBER: "8": line 37:
=<9=<8
     ^
LINE_BREAK: line 37:
=<9=<8
      ^
QUOTED_STRING: "premature␣end␣of␣line": line 38:
"premature end of line
^^^^^^^^^^^^^^^^^^^^^^
ERROR: premature end of line; line 38:
"premature end of line
                      ^
LINE_BREAK: line 38:
"premature end of line
                      ^
QUOTED_STRING: "premature␣end␣of␣file": line 39:
"premature end of file<END-OF-FILE>
^^^^^^^^^^^^^^^^^^^^^^
ERROR: premature end of file; line 39:
"premature end of file<END-OF-FILE>
                      ^
END_OF_FILE: line 39:
"premature end of file<END-OF-FILE>
                      ^
ERROR: line break missing from end of file; line 39:
"premature end of file<END-OF-FILE>
                      ^
